--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ legend(&quot;topright&quot;, inset = 0.025,legend=bquote(atop(mu==.(round(mean(d
 </section>
 <section class='' data-state='' id='slide-5'>
   <h2>App features</h2>
-  <p>The main features of the app are mentioned below.</p>
+  <p><br>
+The main features of the app are mentioned below.</p>
 
 <ul>
 <li>View interactive plots for different probabilistic distribution functions.</li>
